<?xml version="1.0"?>
<package format="3">
  <name>ros_nmea_parser</name>
  <version>0.0.1</version>
  <description>
    Package to parse NMEA strings and publish a very simple GPS message.
  </description>

  <maintainer email="whyoo@synerex.kr">whyoo</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/synrtk/ros_nmea_parser/tree/ros1</url>

  <author email="whyoo@synerex.kr">whyoo</author>
  <author>Steven Martin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 3">catkin_virtualenv</test_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
    <pip_requirements>test/requirements.txt</pip_requirements>
  </export>
</package>
